// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/List/Standard Action list item 1`] = `
<section>
  

  <h4>
    Standard Size
  </h4>
  

  <ul
    class="fd-list"
    role="list"
  >
    
  
    <li
      class="fd-list__item fd-list__item--action"
      role="listitem"
    >
      
      
      <button
        class="fd-list__title"
      >
        Forward
      </button>
      
  
    </li>
    
  
    <li
      class="fd-list__item fd-list__item--action"
      role="listitem"
    >
      
      
      <button
        class="fd-list__title"
      >
        Save
      </button>
      
  
    </li>
    
  
    <li
      class="fd-list__item fd-list__item--action"
      role="listitem"
    >
      
      
      <button
        class="fd-list__title"
      >
        More Options
      </button>
      
  
    </li>
    

  </ul>
  


  <h4>
    Compact Size
  </h4>
  

  <ul
    class="fd-list fd-list--compact"
    role="list"
  >
    
  
    <li
      class="fd-list__item fd-list__item--action"
      role="listitem"
    >
      
      
      <button
        class="fd-list__title"
      >
        Forward
      </button>
      
  
    </li>
    
  
    <li
      class="fd-list__item fd-list__item--action"
      role="listitem"
    >
      
      
      <button
        class="fd-list__title"
      >
        Save
      </button>
      
  
    </li>
    
  
    <li
      class="fd-list__item fd-list__item--action"
      role="listitem"
    >
      
      
      <button
        class="fd-list__title"
      >
        More Options
      </button>
      
  
    </li>
    

  </ul>
  


  <h4>
    Action List Item With Other List Items 
  </h4>
  

  <ul
    class="fd-list"
    role="list"
  >
    
  
    <li
      class="fd-list__item"
      role="listitem"
    >
      
      
      <span
        class="fd-list__title"
      >
        List Item 1
      </span>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
    >
      
      
      <span
        class="fd-list__title"
      >
        List Item 2
      </span>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
    >
      
      
      <span
        class="fd-list__title"
      >
        List Item 3
      </span>
      
  
    </li>
    
  
    <li
      class="fd-list__item fd-list__item--action"
      role="listitem"
    >
      
      
      <button
        class="fd-list__title"
      >
        More Options
      </button>
      
  
    </li>
    

  </ul>
  

</section>
`;

exports[`Storyshots Components/List/Standard Borderless 1`] = `


`;

exports[`Storyshots Components/List/Standard Footer 1`] = `


`;

exports[`Storyshots Components/List/Standard Groups 1`] = `


`;

exports[`Storyshots Components/List/Standard Icons 1`] = `


`;

exports[`Storyshots Components/List/Standard Navigation 1`] = `


`;

exports[`Storyshots Components/List/Standard Navigation indicator 1`] = `


`;

exports[`Storyshots Components/List/Standard Secondary Data 1`] = `


`;

exports[`Storyshots Components/List/Standard Selection 1`] = `
<section>
  

  <h4>
    Standard Size
  </h4>
  

  <ul
    class="fd-list fd-list--selection"
    role="listbox"
  >
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <div
        class="fd-form-item fd-list__form-item"
      >
        
          
        <input
          class="fd-checkbox"
          id="Ai4ez1"
          type="checkbox"
        />
        
          
        <label
          class="fd-checkbox__label"
          for="Ai4ez1"
          tabindex="-1"
        />
        
      
      </div>
      
      
      <span
        class="fd-list__title"
      >
        List item 1
      </span>
      
  
    </li>
    
  
    <li
      class="fd-list__item is-selected"
      role="listitem"
      tabindex="0"
    >
      
      
      <div
        class="fd-form-item fd-list__form-item"
      >
        
          
        <input
          checked=""
          class="fd-checkbox"
          id="Ai4ez2"
          type="checkbox"
        />
        
          
        <label
          class="fd-checkbox__label"
          for="Ai4ez2"
          tabindex="-1"
        />
        
      
      </div>
      
      
      <span
        class="fd-list__title"
      >
        List item 2
      </span>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <div
        class="fd-form-item fd-list__form-item"
      >
        
          
        <input
          class="fd-checkbox"
          id="Ai4ez3"
          type="checkbox"
        />
        
          
        <label
          class="fd-checkbox__label"
          for="Ai4ez3"
          tabindex="-1"
        />
        
      
      </div>
      
      
      <span
        class="fd-list__title"
      >
        List item 3
      </span>
      
  
    </li>
    

  </ul>
  


  <h4>
    Compact Size
  </h4>
  

  <ul
    class="fd-list fd-list--selection fd-list--compact fd-list--no-border"
    role="listbox"
  >
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <div
        class="fd-form-item fd-list__form-item"
      >
        
          
        <input
          class="fd-checkbox fd-checkbox--compact"
          id="Ai4ez4"
          type="checkbox"
        />
        
          
        <label
          class="fd-checkbox__label fd-checkbox__label--compact"
          for="Ai4ez4"
          tabindex="-1"
        />
        
      
      </div>
      
      
      <span
        class="fd-list__title"
      >
        List item 1
      </span>
      
  
    </li>
    
  
    <li
      class="fd-list__item is-selected"
      role="listitem"
      tabindex="0"
    >
      
      
      <div
        class="fd-form-item fd-list__form-item"
      >
        
          
        <input
          checked=""
          class="fd-checkbox fd-checkbox--compact"
          id="Ai4ez5"
          type="checkbox"
        />
        
          
        <label
          class="fd-checkbox__label fd-checkbox__label--compact"
          for="Ai4ez5"
          tabindex="-1"
        />
        
      
      </div>
      
      
      <span
        class="fd-list__title"
      >
        List item 2
      </span>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <div
        class="fd-form-item fd-list__form-item"
      >
        
          
        <input
          class="fd-checkbox fd-checkbox--compact"
          id="Ai4ez6"
          type="checkbox"
        />
        
          
        <label
          class="fd-checkbox__label fd-checkbox__label--compact"
          for="Ai4ez6"
          tabindex="-1"
        />
        
      
      </div>
      
      
      <span
        class="fd-list__title"
      >
        List item 3
      </span>
      
  
    </li>
    

  </ul>
  

</section>
`;

exports[`Storyshots Components/List/Standard Standard 1`] = `
<section>
  

  <h4>
    Standard Size
  </h4>
  

  <ul
    class="fd-list"
    role="list"
  >
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <span
        class="fd-list__title"
      >
        List item 1
      </span>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <span
        class="fd-list__title"
      >
        List item 2
      </span>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <span
        class="fd-list__title"
      >
        List item 3
      </span>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <span
        class="fd-list__title"
      >
        List item 4
      </span>
      
  
    </li>
    

  </ul>
  


  <h4>
    Compact Size
  </h4>
  

  <ul
    class="fd-list fd-list--compact"
    role="list"
  >
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <span
        class="fd-list__title"
      >
        List item 1
      </span>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <span
        class="fd-list__title"
      >
        List item 2
      </span>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <span
        class="fd-list__title"
      >
        List item 3
      </span>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <span
        class="fd-list__title"
      >
        List item 4
      </span>
      
  
    </li>
    

  </ul>
  

</section>
`;
